# deno-pty-ffi

./: LICENSE  README.md  TODO.md  a.ts  b.ts  c.ts  deno.json  deno.jsonc  example.ts  mod.ts  smoke.ts  version.ts
.github/workflows/: ci.yml  publish-jsr.yml  release.yml
scripts/: push-update.ts
src/: deps.ts  ffi.ts  mod.ts  utils.ts
src-rust/: Cargo.toml
src-rust/src/: lib.rs  utils.rs
tests/: mod.test.ts  repl.test.ts
