[package]
name = "pty"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
parking_lot = "0.12.1"
portable-pty = "0.8.1"
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.99"

[lib]
crate-type = ["cdylib"]
