[package]
name = "pty"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
strip = true  # Automatically strip symbols from the binary.

[dependencies]
crossbeam = { version = "0.8.2", features = ["crossbeam-channel"] }
once_cell = "1.19.0"
parking_lot = "0.12.1"
portable-pty = { version = "0.8.1", features = ["serde_support"] }
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.99"

[lib]
crate-type = ["cdylib"]
