[package]
name = "pty"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
strip = true  # Automatically strip symbols from the binary.

[dependencies]
crossbeam = { version = "0.8.4", features = ["crossbeam-channel"] }
parking_lot = "0.12.3"
portable-pty = { version = "0.9.0", features = ["serde_support"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"

[lib]
crate-type = ["cdylib"]
